syntax = "proto3";

package vou.proto;

import "auth/user.proto";

option go_package = "VOU-Server/proto/gen";

message GetAllOtherUsersRequest {
  string username = 1;
}

message GetAllOtherUsersResponse {
  repeated User users = 1;
}